Updating navbar font color

--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -10,7 +10,7 @@
 }
 /*ACTION ITEM:  customize the color and font-family*/
 .navbar-brand {
-  color: #001a33 !important;
+  color: #ffffff !important;
   font-family: Book Antiqua;
   font-size: 24px; 
 }
